--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="coffe , restaurants, speciality coffee, coffee beans, coffee shop, coffee subscription coffee delivery " />
+    <meta name="description" content="Experience the perfect cup of coffee with our speciality coffee beans. Discover our unique blends, subsrciption options and delivery services" />
+
     <title>Vibe Coffe</title>
   </head>
   <body>
