--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="coffe , restaurants, speciality coffee, coffee beans, coffee shop, coffee subscription coffee delivery " />
     <meta name="description" content="Experience the perfect cup of coffee with our speciality coffee beans. Discover our unique blends, subsrciption options and delivery services" />
-
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
     <title>Vibe Coffe</title>
   </head>
   <body>
